banner image fonts set, tab spacing fixed

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -1,5 +1,5 @@
 @import "variables";
-$headshot-height-lg:  405px;
+$headshot-height-lg:  382px;
 
 //small screens
 @media only screen {
@@ -8,11 +8,11 @@ $headshot-height-lg:  405px;
   }
 
   .tabs  {
-    margin: .75em 0 !important;
+    margin: 10px 0 !important;
   }
 
   .tabs dd > a  {
-    margin-right: 1.0em;
+    margin-right: 10px;
     font-size: 0.75em;
     width: 93px;
     height: 26px;
@@ -34,12 +34,16 @@ $headshot-height-lg:  405px;
   }
 
   .text-content  {
-    h3  {
-      color: rgba(255,255,255,.8);
-    }
-    padding: .25em .75em 1em .75em;
+    font-size: 14px;
+    line-height: 24px;
+    font-family: sans-regular;
+    padding: 20px 25px 20px 25px;
     background-color: rgba(255,255,255,.1);
     color: rgba(255,255,255,.8);
+    h3  {
+      margin-bottom: 20px;
+      line-height: 36px;
+    }
   }
 
   .tabs-content > .content  {
@@ -88,15 +92,14 @@ $headshot-height-lg:  405px;
 /* M Screens: min-width 641px */
 @media only screen and (min-width: 40.063em) {
   .text-content  {
-    padding: .50em 1.25em 2em 1.25em;
+    padding: 20px 25px 20px 25px;
   }
 
   .tabs dd > a  {
     //padding: .3em 2.75em;
-    margin-right: 1em;
+    margin-right: 20px;
     font-size: 18px;
     font-family:  stratum2-medium;
-    text-transform: capitalize;
     width: 140px;
     text-align:center;
     padding: 0;
@@ -105,7 +108,7 @@ $headshot-height-lg:  405px;
   }
 
   .tabs  {
-    margin: 1em 0 !important;
+    margin: 20px 0 !important;
   }
 
   #about-us  {
