--- a/app/assets/stylesheets/fonts.css.scss
+++ b/app/assets/stylesheets/fonts.css.scss
@@ -9,6 +9,10 @@
     src: url('/assets/Stratum/Stratum2-Regular.otf') format('eot');
 }
 
+@font-face  {
+    font-family: 'stratum2-bold';
+    src: url('/assets/Stratum/Stratum2-bold.otf') format('eot');
+}
 
 /* open sans */
 
