--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -117,19 +117,19 @@
 // $include-html-type-classes: $include-html-classes;
 
 // We use these to control header font styles
-// $header-font-family: $body-font-family;
+ $header-font-family: stratum2-regular;
 // $header-font-weight: normal;
 // $header-font-style: normal;
- $header-font-color: rgba(255, 255, 255, 0.85);
+ $header-font-color: white;
 // $header-line-height: 1.4;
-// $header-top-margin: .2rem;
+ $header-top-margin: 0rem;
 // $header-bottom-margin: .5rem;
 // $header-text-rendering: optimizeLegibility;
 
 // We use these to control header font sizes
 $h1-font-size: rem-calc(24);
 $h2-font-size: rem-calc(15);
-$h3-font-size: rem-calc(27);
+$h3-font-size: rem-calc(24);
 // $h4-font-size: rem-calc(23);
 // $h5-font-size: rem-calc(18);
 // $h6-font-size: 1rem;
@@ -146,10 +146,10 @@ $h3-font-size: rem-calc(27);
 // $small-font-color: scale-color($header-font-color, $lightness: 35%);
 
 // We use these to style paragraphs
-// $paragraph-font-family: inherit;
+ $paragraph-font-family: sans-regular;
 // $paragraph-font-weight: normal;
 // $paragraph-font-size: 1rem;
-// $paragraph-line-height: 1.6;
+ $paragraph-line-height: 24px;
 // $paragraph-margin-bottom: rem-calc(20);
 // $paragraph-aside-font-size: rem-calc(14);
 // $paragraph-aside-line-height: 1.35;
