--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -148,6 +148,7 @@ li.orbit-image-2  {
     margin-top: 20px;
     margin-bottom: 50px;
     text-align: right;
+    text-transform: uppercase;
     .footer-info  {
       color: rgb(217,217,217);
       font-family: sans-bold;
@@ -220,6 +221,7 @@ li.orbit-image-2  {
     height: 135px;
     margin-top: 107.5px;
     margin-left: 25px;
+    text-transform: uppercase;
   }
   .slider-hl  {
     font-size: 36px;
@@ -263,6 +265,7 @@ li.orbit-image-2  {
   }
 
   .nav-tile  {
+    text-transform: uppercase;
     background-size: cover;
     -ms-background-position-x: center;
     -ms-background-position-y: bottom;
