--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -1,27 +1,23 @@
 @import "variables";
 
-body  {
-  height: auto;
-  min-height: 100%;
-  background-image: asset-url("site_wide/black_twill/black_twill.png", image);
-}
-
-a:hover  {
-  background-color: transparent;
-}
-
-figure  {
-  margin: 0px;
-}
-
-.stretch-image  {
-  width: 100%;
-}
-
 // Small screens
 @media only screen {
   body  {
-    text-transform: uppercase;
+    height: auto;
+    min-height: 100%;
+    background-image: asset-url("site_wide/black_twill/black_twill.png", image);
+  }
+
+  a:hover  {
+    background-color: transparent;
+  }
+
+  figure  {
+    margin: 0px;
+  }
+
+  .stretch-image  {
+    width: 100%;
   }
 
   ul {
@@ -32,6 +28,10 @@ figure  {
         color: rgb(217,217,217);
       }
     }
+  }
+
+  p  {
+    font-size: 14px;
   }
 
   a:hover {
@@ -54,17 +54,19 @@ figure  {
   }
 
   .interior-footer  {
+    text-transform: uppercase;
     padding-top: 20px;
     width: 100%;
-    height: 180px;
+    height: 115px;
     background-image: asset-url("site_wide/global_footer.jpg", image);
     background-size: cover;
     border-top: solid 2px $gymsight-orange;
     .social-container  {
       margin-top: 10px;
     }
-
     ul  {
+      font-size: 12px;
+      font-family: sans-regular;
       list-style: none;
       margin-top: 0px;
       margin-bottom: 0px;
@@ -119,21 +121,25 @@ figure  {
   }
 
   .banner-text  {
-      position: absolute;
-      top: 0;
-      margin-left: 25px;
-      padding-top: 30px;
-      font-size: 24px;
-      line-height: 1.2;
+    font-family: stratum2-bold;
+    text-transform: uppercase;
+    position: absolute;
+    top: 0;
+    margin-left: 10px;
+    padding-top: 28px;
+    font-size: 28px;
+    line-height: 1.2;
 
   }
 
   .centeredmenu {
+    text-transform: uppercase;
     float:left;
     width:100%;
     overflow:hidden;
     position:relative;
-    margin-bottom: 0.4995rem;
+    margin-bottom: 30px;
+    margin-top: 20px;
     ul {
       font-size: .67em;
       clear:left;
@@ -159,8 +165,9 @@ figure  {
       }
     }
     a {
+      margin: 0 10px;
       display:block;
-      padding-bottom: 8px;
+      padding-bottom: 4px;
       color:rgba(191,191,191,1);
       &:hover {
         color: white;
@@ -194,7 +201,7 @@ figure  {
   min-height: 95px;
   a {
       img {
-       margin: 1.5em 3em 0.9375rem 3em;
+       margin-top: 40px;
       }
       &:hover {
         background-color: transparent;
@@ -255,12 +262,12 @@ figure  {
   }
 
   .banner-text  {
+      margin-left: 25px;
       padding-top: 47px;
-      font-size: 28px;
+      font-size: 48px;
   }
 
   .centeredmenu  {
-    margin-bottom: .5em;
     margin-top: 40px;
     margin-bottom: 80px;
     ul  {
@@ -269,6 +276,7 @@ figure  {
     a  {
       margin-left: 20px;
       margin-right: 20px;
+      padding-bottom: 8px;
     }
   }
 
@@ -290,7 +298,6 @@ figure  {
 
   .banner-text  {
       padding-top: 67px;
-      font-size: 36px;
   }
 
   .centeredmenu  {
